--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
